# mvm

./: .gitignore  CHANGELOG.md  LICENSE  MVM.cabal  README.md  flake.nix
app/: Assembler.hs  Command.hs  Instruction.hs  Interpreter.hs  Main.hs  Parser.hs  Runner.hs  Util.hs  VirtualMachine.hs
app/Assembler/: Compiler.hs  Emitter.hs  Parser.hs  Tokenizer.hs
app/VirtualMachine/: Instruction.hs  Interpreter.hs  VM.hs
examples/: example1.S  example2.S  example3.S  example4.S  example5.S
test/: UtilSpec.hs  VirtualMachineSpec.hs
test/Assembler/: EmitterSpec.hs  ParserSpec.hs  TokenizerSpec.hs
