cabal-version:      2.4
name:               MVM
version:            0.1.0.0
synopsis:
    Simple stack machine implementation for educational purposes

-- A longer description of the package.
-- description:
homepage:           https://bartlomiejpluta.com

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Bartłomiej Pluta
maintainer:         noreply.git@mx.bartlomiejpluta.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable MVM
    main-is:          Main.hs

    ghc-options: -Wall

    -- Modules included in this executable, other than Main.    
    other-modules:
      VirtualMachine
      Assembler.Tokenizer
      Assembler.Parser
      Assembler.Emitter
      Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.15.0.0,
      bytestring ^>=0.11.0.0,
      containers ^>=0.6.4.1,
      mtl ^>=2.2.2
      
    hs-source-dirs:   app
    default-language: Haskell2010
  
test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      app
      test
  ghc-options: -Wall
  build-depends:
      base ^>=4.15.0.0,
      bytestring ^>=0.11.0.0,
      containers ^>=0.6.4.1, 
      mtl ^>=2.2.2,
      hspec ==2.*
  other-modules:      
      Assembler.TokenizerSpec  
      Assembler.ParserSpec
      Assembler.EmitterSpec
      UtilSpec

      VirtualMachine
      Assembler.Tokenizer
      Assembler.Parser
      Assembler.Emitter
      Util          
        
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
